Fix menuwidth on mobile

--- a/src/components/GameMenu/GameMenu.css
+++ b/src/components/GameMenu/GameMenu.css
@@ -1,7 +1,8 @@
 .Menu {
   height: auto;
   min-height: 30vw;
-  width: 30vw;
+  width: auto;
+  min-width: 30vw;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
